syntax = "proto3";

package transaction;

option go_package = "./adapter/pkg/transaction/pb";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";

service TransactionService {
  rpc FindAll(google.protobuf.Empty) returns (ListTransactionsResponse);
  rpc FindByNoTransaction(GetTransactionByNoTransactionRequest) returns (GetTransactionResponse);
  rpc Create(CreateTransactionRequest) returns (GetTransactionResponse);
  rpc CreateByCSV(CreateTransactionByCSVRequest) returns (google.protobuf.Empty);
  rpc Update(UpdateTransactionRequest) returns (GetTransactionResponse);
  rpc Delete(GetTransactionByNoTransactionRequest) returns (google.protobuf.Empty);
  rpc Truncate(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message Transaction {
  int64 IdTransaction = 1;
  string ProductName = 2;
  string CustomerName = 3;
  string NoTransaction = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message ListTransactionsResponse {
  repeated Transaction Transaction = 1;
}

message GetTransactionResponse {
  Transaction Transaction = 1;
}

message GetTransactionByNoTransactionRequest {
  string NoTransaction = 1;
}

message CreateTransactionRequest {
  string ProductName = 1;
  string CustomerName = 2;
}

message CSVRequest {
  repeated string CSV = 1;
}

message CreateTransactionByCSVRequest {
  repeated CSVRequest request = 1;
}

message UpdateTransactionRequest {
  string ProductName = 1;
  string CustomerName = 2;
  string NoTransaction = 3;
}